Perceptron Learning algorithm from scratch

--- a/machine-learning/PerceptronScratch.ipynb
+++ b/machine-learning/PerceptronScratch.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "e8508264",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "a3cb15a1",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,7 @@
     "    # weights_bias is a numpy array. 1st element is the bias. Remaining elements are the weights.\n",
     "    # iterations is the number of times the process will run to optimize the weights and bias. \n",
     "    # learning_rate is constant that controls the updates.\n",
+    "    \n",
     "    def __init__(self, weights_bias, iterations=100, learning_rate=0.01):\n",
     "        # B.1 Initialize weights_bias, iterations, and learning_rate\n",
     "        self.weights = weights_bias\n",
@@ -59,62 +60,37 @@
     "    # Define a method for predicting the output given one input sample\n",
     "    def predictOne(self, inputs):\n",
     "        # B.2 Calculate the weighted sum \n",
-    "        summation = (self.weights[1] * inputs[0]) + (self.weights[2] * inputs[1]) + self.weights[0] \n",
+    "        summation = np.dot(inputs, self.weights[1:]) + self.weights[0]\n",
     "        # B.3 Set the activation value based on the summation result\n",
     "        if summation > 0:\n",
     "            activation = 1\n",
-    "            \n",
-    "        elif summation <= 0:\n",
+    "        else:\n",
     "            activation = 0\n",
     "            \n",
     "        return activation\n",
     "    \n",
     "    # Define a method for predicting the output given a numpy array of inputs\n",
     "    def predict(self, training_inputs):\n",
+    "        return np.array([self.predictOne(x) for x in training_inputs])\n",
     "        # B.4 Using predictOne method, loop through the training_inputs and predict the output \n",
-    "        index = 0\n",
-    "        predictions = []\n",
-    "        while index < len(training_inputs):\n",
-    "            activation = self.predictOne(training_inputs[index])\n",
-    "            predictions.append(activation)\n",
-    "            index+=1\n",
-    "        # return a numpy array of the outputs\n",
-    "        return predictions\n",
-    "    \n",
+    "   \n",
     "    # Define a method for training a percepton. \n",
     "    # The weights and bias are updated when the prediction is not correct. \n",
     "    # The process runs based on the defined number of iterations. \n",
     "    def train(self, training_inputs, labels):\n",
     "        # B.4 Loop through the iterations\n",
-    "            index = 0\n",
-    "            iteri = 0\n",
-    "            hit = 0\n",
-    "            while iteri < self.iterations:\n",
-    "                while index < len(labels):\n",
-    "                    actv = self.predictOne(training_inputs[index])\n",
-    "                    if actv == labels[index]:\n",
-    "                        #correct prediction\n",
-    "                        hit+=1\n",
-    "                        index+=1\n",
-    "                        \n",
-    "\n",
-    "                    elif actv != labels[index]:\n",
-    "                        #wrong prediction, updating the weights\n",
-    "                        self.weights[1] = self.weights[1] + self.learning_rate*(labels[index] - actv) * training_inputs[index][0]\n",
-    "                        self.weights[2] = self.weights[2] + self.learning_rate*(labels[index] - actv) * training_inputs[index][1]\n",
-    "                        #updating bias\n",
-    "                        self.weights[0] = self.weights[0] +  self.learning_rate*(labels[index] - actv)\n",
-    "                iteri+=1\n",
-    "\n",
-    "            accuracy = (hit/len(labels)) * 100\n",
-    "            accuracy = round(accuracy, 2)\n",
-    "            print (f\"Accuracy After weight adjustment = {accuracy}%\")\n",
+    "            for _ in range(self.iterations):\n",
+    "                for x,label in zip(training_inputs, labels):\n",
+    "                    prediction = self.predictOne(x)\n",
+    "                    self.weights[0]  = self.weights[0] + self.learning_rate * (label - prediction)\n",
+    "                    self.weights[1] = self.weights[1] + self.learning_rate * (label - prediction) * x[0]\n",
+    "                    self.weights[2] = self.weights[2] + self.learning_rate * (label - prediction) * x[1]\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "1bbd3e26",
    "metadata": {},
    "outputs": [],
@@ -134,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "0689fcf5",
    "metadata": {},
    "outputs": [
@@ -142,28 +118,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy After weight change = 100.0%\n",
-      "Prediction (%) = 10.0%\n"
+      "[1 0 1 1 1 0 1 0 0 1]\n",
+      "[1 0 1 1 1 0 1 0 0 1]\n",
+      "Prediction (%) = 100.0%\n"
      ]
     }
    ],
    "source": [
     "# C.1 Create an instance of MyPerceptron with the following parameters:\n",
     "# bias = 0.5, w1 = 0.5, w2 = 0.5, iterations=50, learning_rate=0.2\n",
-    "TestModel = MyPerceptron([0.5,0.5,0.5], iterations=50, learning_rate=0.2)\n",
+    "TestModel = MyPerceptron(np.array([0.5,0.5,0.5]), iterations=50, learning_rate=0.2)\n",
     "# C.2 Train the perceptron by passing the training_data and labels\n",
     "TestModel.train(training_data, labels)\n",
+    "\n",
     "predictions = TestModel.predict(training_data)\n",
-    "i = 0 \n",
+    "#print (predictions)\n",
+    "#print (labels)\n",
+    "i = 0\n",
+    "count = 0\n",
     "for i in range(len(labels)):\n",
-    "    count = 0\n",
     "    if labels[i] ==  predictions[i]:\n",
     "        count += 1\n",
     "\n",
     "acc = (count / len(labels)) * 100\n",
     "acc = round(acc,2)\n",
-    "print (f\"Prediction (%) = {acc}%\")\n",
-    "# C.3 Predict the outputs and calculate the accuracy of the model\n"
+    "print (f\"Prediction (%) = {acc}%\")"
    ]
   },
   {
@@ -176,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "4b2c2b26",
    "metadata": {},
    "outputs": [
